This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php


Server Fixes

--Max baby/mom ratio 1.0 (was 2.0) and baby/adult ratio 1.0 (was 2.0).  When
  these ratios are met or surpassed, a new Eve is inserted.  During normal
  times, the ratios are more like 0.5 and 0.125, so the ratios only come into
  effect during server restart.  There have been too few Eves and baby overload
  after recent restarts, so these new settings should give us 2x more Eves.

--Min posse size cap 5 (was 3), which means that in places with 10 or more
  people, you need a posse of 5 to kill, and in places with 8 or 9 people, you
  need a posse of 4 to kill.  (Min posse fraction is 0.5 of the local
  population.)  This makes it harder for small groups to wage campaigns of
  terror.

--Only people old enough to join a posse (age 9, when they can say I JOIN YOU)
  are counted when computing min posse size.




Version 332    2020-May-1

--Fixed a rare bug where a player standing still and not changing while you
  move out of range of them will still have emote and animation sounds
  displayed for them (because you never get a PO message for them).  Their
  distances is now measured and they are marked outOfRange client-side, even if
  no PO message arrives for them.

--Fence and wall making now much less fiddly, because you auto-move to a
  neighboring tile if you try to build a fence or wall where you're currently
  standing (before, the build action was blocked by you standing there).

--Fixed tutorial wording to match how YUM currently works.  Fixes #604




Server Fixes

--If player had short last life or is twin, we don't even let them join a
  posse, to avoid confusion.  Otherwise, a seeminly large-enough posse might be
  ineffective.  A short life or twin player can still lead a posse or complete
  a solo kill in a low-pop area (but they don't count toward the population of
  the posse that they lead).
